--- a/giphy.css
+++ b/giphy.css
@@ -1,13 +1,10 @@
-
-#heading{
+#heading {
   text-transform: uppercase;
-  background-image: linear-gradient(
-    -225deg,
-    #231557 0%,
-    #44107a 29%,
-    #ff1361 67%,
-    #fff800 100%
-  );
+  background-image: linear-gradient(-225deg,
+      #231557 0%,
+      #44107a 29%,
+      #ff1361 67%,
+      #fff800 100%);
   background-size: auto auto;
   background-clip: border-box;
   background-size: 200% auto;
@@ -17,25 +14,26 @@
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   animation: textclip 2s linear infinite;
-  display:flexbox;
+  display: flexbox;
   -ms-flex-align: center;
-      font-size: 100px;
-}
-@keyframes textclip {
-    to {
-      background-position: 100% center;
-    }
-  }
-  
-.giphy-form{
-   display:flexbox;
-    justify-items: center;
-    justify-content: center;
-    align-items: center;
-    margin:50px auto;
+  font-size: 100px;
 }
 
-.input-text{
+@keyframes textclip {
+  to {
+    background-position: 100% center;
+  }
+}
+
+.giphy-form {
+  display: flexbox;
+  justify-items: center;
+  justify-content: center;
+  align-items: center;
+  margin: 50px auto;
+}
+
+.input-text {
   width: 50%;
   padding: 12px 20px;
   margin: 8px 0;
@@ -44,18 +42,19 @@
   background-color: #bc3c71;
   color: white;
 }
-.giphy-button{
-    width:20%;
-    height: 10%;
-    padding: 12px 20px;
-    display:inline-table;
-    position:relative;
-    background-color:#305f91;
-    justify-items: center;
-    justify-content: center;
-    color: #ffffff;
-    border:none;
-    border-radius:10px;
-    margin: 8px 0;
-    box-shadow: 0px 0px 2px 2px rgb(34, 19, 96);
+
+.giphy-button {
+  width: 20%;
+  height: 10%;
+  padding: 12px 20px;
+  display: inline-table;
+  position: relative;
+  background-color: #305f91;
+  justify-items: center;
+  justify-content: center;
+  color: #ffffff;
+  border: none;
+  border-radius: 10px;
+  margin: 8px 0;
+  box-shadow: 0px 0px 2px 2px rgb(34, 19, 96);
 }
